scaffold support for gh apps
